# Argos

./: .gitignore  CMakeLists.txt  COPYING  FAQ.md  INSTALL  INSTALL.md  MANUAL.md  README.md  TODO.md
Argos.xcodeproj/: project.pbxproj
CMakeModules/: FindICU.cmake  FindLog4CPlus.cmake
analyzer/: CMakeLists.txt  analyser.cpp  char_type.h  text_analyzer.cpp
argos_ri_backend/: CMakeLists.txt  argos_match.cpp  argos_match.h  doc_ops.cpp  rindex.cpp  rindex.h
common/: CMakeLists.txt  aton.cpp  expr_node.cpp  field_config.cpp  mem_pool.cpp  operators.cpp  optimizer.cpp  primes.cpp  term_list.cpp  timer.cpp  token_parser.cpp  value.cpp
dummy_ri_backend/: CMakeLists.txt  dummy_ri_backend.cpp
include/: analyzer.h  common.h  index.h  logging.h  parser.h  query.h  serialization.h
include/common/: argos_consts.h  argos_exception.h  block_chain.h  concurrent_queue.h  evaluatable.h  execution_context.h  expr_node.h  field_config.h  hash_function.h  hash_table.h  heaper.h  mem_pool.h  mem_pool_allocator.h  primes.h  string_col.h  term_list.h  token_parser.h  util.h  value.h
include/index/: doc_storage.h  field_evaluator.h  forward_index.h  full_index.h  reverse_index.h
include/pugixml/: pugixml.hpp
include/query/: argos_query.h  doc_iterator.h  enquire.h  match.h
include/utf8/: unchecked.h
index/: CMakeLists.txt  doc_storage.cpp  execution_context.cpp  field_evaluator.cpp  forward_index.cpp  full_index.cpp  reverse_index.cpp
indexer/: CMakeLists.txt  indexer_main.cpp
json_spirit/: json_spirit_reader_template.h  json_spirit_writer_options.h  json_spirit_writer_template.h
net/: CMakeLists.txt  config_handler.cpp  config_handler.hpp  connection.cpp  connection.hpp  header.hpp  indices_handler.cpp  indices_handler.hpp  insert_handler.cpp  insert_handler.hpp  item_handler.cpp  item_handler.hpp  mime_types.cpp  mime_types.hpp  query_handler.cpp  query_handler.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  server_main.cpp  url_handler.cpp  url_handler.hpp
parser/: CMakeLists.txt  aql_parser.cpp  parser.cpp  urldecode.cpp  value_parser.h
pugixml/: CMakeLists.txt  pugixml.cpp
query/: CMakeLists.txt  doc_iterator.cpp  enquire.cpp  match.cpp  query.cpp
searcher/: CMakeLists.txt  searcher_main.cpp
serialization/: CMakeLists.txt  result.pb.cc  result.pb.h  result.proto  search_result.pb.cpp  search_result.pb.h  search_result.proto  serialization.cpp
test/: CMakeLists.txt  config.xml  log.properties  pb_reader.cpp  test_doc.txt
www/: config.xsl  index.html  indices.xsl  q.html  results.xsl  urlcodec.html
